<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hekrxe</groupId>
    <artifactId>plana</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>
    <modules>
        <module>minor</module>
        <module>fromwork</module>
        <module>agent</module>
        <module>mesh</module>
        <module>chime</module>
    </modules>
    <repositories>
        <repository>
            <id>netease-release</id>
            <name>netease-releases</name>
            <url>http://mvn.hz.netease.com/artifactory/libs-releases</url>
        </repository>
        <repository>
            <id>netease-repo</id>
            <url>http://mvn.hz.netease.com/artifactory/repo</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
            <id>snapshot</id>
            <name>netease-snapshot</name>
            <url>http://mvn.hz.netease.com/artifactory/libs-snapshots</url>
        </repository>
        <repository>
            <id>mvnrepository</id>
            <name>mvnrepository</name>
            <url>http://www.mvnrepository.com/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>ibiblio</id>
            <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
        </repository>
        <repository>
            <id>spring</id>
            <url>http://maven.springframework.org/release</url>
        </repository>
    </repositories>

    <properties>
        <!--base-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.version>1.0.0</project.version>

        <!--plugin-->
        <plugin.maven.compiler.version>3.6.1</plugin.maven.compiler.version>
        <plugin.scala.maven.version>3.2.2</plugin.scala.maven.version>
        <plugin.maven.resource.version>2.7</plugin.maven.resource.version>
        <plugin.maven.dependency>3.0.2</plugin.maven.dependency>

        <!--lang-->
        <java.version>1.8</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${plugin.scala.maven.version}</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <recompileMode>incremental</recompileMode>
                    <useZincServer>false</useZincServer>
                    <checkMultipleScalaVersions>true</checkMultipleScalaVersions>
                    <args>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                        <arg>-target:jvm-${java.version}</arg>
                    </args>
                    <javacArgs>
                        <javacArg>-source</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-target</javacArg>
                        <javacArg>${java.version}</javacArg>
                    </javacArgs>
                    <jvmArgs>
                        <jvmArg>-Xms64m</jvmArg>
                        <jvmArg>-XX:PermSize=128m</jvmArg>
                        <jvmArg>-XX:MaxPermSize=256m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>